[build-system]
requires = ['setuptools>=69']
build-backend = 'setuptools.build_meta'

[project]
requires-python = ">=3.8"
dependencies = [ 
    "pyyaml",
]

[project.optional-dependencies]
# development dependency groups
test = [
    'pytest',
    'coverage',
    'ruamel.yaml'
]

style = [
    'black',
]

