[metadata]
name = ymlconf
version = 0.0.1
description = yaml config parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/edager/platelib
project_urls =
    Bug Tracker = https://github.com/edager/platelib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = ymlconf
packages = find:

[options.packages.find]
where = ymlconf